# footstep_planner

./: .gitignore  CMakeLists.txt  data.csv  package.xml
config/: config.hpp
data/: accelerations.csv  continuous.csv  fail.csv  velocity_plot.ipynb
data/experiments/: predictions.ipynb
data/experiments/scenario1/horizon3/: tr1.txt  tr2.txt
data/experiments/scenario1/horizon5/: tr1.txt  tr2.txt
data/experiments/scenario1/horizon7/: tr1.txt
data/experiments/scenario2/horizon3/: tr1.txt  tr2.txt
data/experiments/scenario2/horizon5/: tr1.txt  tr2.txt
data/experiments/scenario2/horizon7/: tr1.txt  tr2.txt
data/experiments/scenario3/horizon3/: tr1.txt  tr2.txt
data/experiments/scenario3/horizon5/: tr1.txt  tr2.txt
data/experiments/scenario3/horizon7/: tr1.txt
data/notebooks/1_processing/absolute/: com_live_extraction_continuous_absolute.ipynb  footsteps_live_extraction_continuous_absolute.ipynb
data/notebooks/1_processing/absolute_real/: com_live_extraction_accelerations_absolute.ipynb  com_live_extraction_continuous_absolute.ipynb  footsteps_live_extraction_accelerations_absolute.ipynb  footsteps_live_extraction_continuous_absolute.ipynb
data/notebooks/1_processing/absolute_sim/: com_live_extraction_accelerations_absolute.ipynb  com_live_extraction_continuous_absolute.ipynb  footsteps_live_extraction_accelerations_absolute.ipynb  footsteps_live_extraction_continuous_absolute.ipynb
data/notebooks/data_processing/absolute_real/: com_live_extraction_accelerations_absolute.ipynb  footsteps_live_extraction_accelerations_absolute.ipynb
data/notebooks/data_processing/absolute_sim/: com_live_extraction_continuous_absolute.ipynb  footsteps_live_extraction_continuous_absolute.ipynb
data/notebooks/model_training/com_displacements/: com_fl_rr_acceleration_model.ipynb  com_fr_rl_acceleration_model.ipynb
data/notebooks/model_training/footstep_displacements/: FL_model.ipynb  FR_model.ipynb  RL_model.ipynb  RR_model.ipynb
data/notebooks/real/data/: com_data_real.ipynb  feet_data_real.ipynb  velocity_data_real.ipynb
data/notebooks/real/data_processing/: com_live_extraction_accelerations_absolute.ipynb  footsteps_live_extraction_accelerations_absolute.ipynb
data/notebooks/simulation/data_processing/: com_data_sim.ipynb  com_live_extraction_accelerations_absolute.ipynb  feet_data_sim.ipynb  footsteps_live_extraction_accelerations_absolute.ipynb  velocity_data_sim.ipynb
data/notebooks/simulation/model_training/: com_model.ipynb  feet_model.ipynb  velocity_model.ipynb
data/notebooks_dataset1/: data_exploration.ipynb  motion_analysis_01.ipynb  motion_analysis_02.ipynb  motion_analysis_03.ipynb
data/notebooks_dataset2/: data_exploration.ipynb
data/notebooks_dataset2/foot_predictions/3D-prediction/: FL_foot_prediction.ipynb  FR_foot_prediction.ipynb  RL_foot_prediction.ipynb
data/notebooks_dataset2/foot_predictions/Step-prediction/: FR_foot_prediction.ipynb  RR_foot_prediction.ipynb
data/notebooks_dataset3/prediction_notebooks/absolute_prediction/: FL_foot_absolute_prediction.ipynb  FR_foot_absolute_prediction.ipynb  RL_foot_absolute_prediction.ipynb  RR_foot_absolute_prediction.ipynb  testing_absolute_prediction.ipynb  testing_absolute_prediction2.ipynb
data/notebooks_dataset3/prediction_notebooks/relative_prediction/: FL_support_relative_prediction.ipynb  FL_swinging_relative_prediction.ipynb  FR_support_relative_prediction.ipynb  FR_swinging_relative_prediction.ipynb  RL_support_relative_prediction.ipynb  RL_swinging_relative_prediction.ipynb  (+2 more)
data/notebooks_dataset4_wbc/live_extraction/: com_live_extraction_accelerations.ipynb  com_live_extraction_continuous.ipynb  footsteps_live_extraction_continuous.ipynb
data/planner_results/: planner_results_analysis.ipynb
data/planner_results/parkour1/: 02.txt  04.txt  06.txt  08.txt  1.txt  run1.txt  run1_as.txt  run2.txt  run2_as.txt  run3.txt  run3_as.txt  run4.txt
data/planner_results/parkour2/: 02.txt  04.txt  06.txt  08.txt  1.txt  run1.txt  run1_as.txt  run2.txt  run2_as.txt  run3.txt  run3_as.txt
data/planner_results/parkour3/: run1.txt
data/planner_results/scenario1/: 02.txt  04.txt  06.txt  08.txt  09_constant_velocity.txt  1.txt  run1.txt  run2.txt  run3.txt  scenario1_1.txt
data/planner_results/scenario2/: 02.txt  04.txt  06.txt  08.txt  1.txt  run1.txt  run2.txt  run2_f.txt  run3.txt  run4.txt  scenario2_1.txt
data/planner_results/scenario3/: 02.txt  04.txt  06.txt  08.txt  1.txt  1_f.txt  pic.txt  run1.txt  run2.txt  run3.txt  scenario3_1.txt  scenario3_close_start.txt
data/planner_results/scenario4/: run1.txt  run2.txt  run3txt
data/real/: accelerations.csv  continuous.csv
data/real_monica/: accelerations.csv  bags.csv  continuous.csv  data.csv  lol.csv  planner_bags.csv  sharp_accelerations.csv  test_set.csv
data/sim/: continuous.csv  data.csv
include/: aStar.hpp  elevationMapProcessor.hpp  model.hpp  navigation.hpp  planner.hpp
include/search/: AStar.hpp
include/structs/: action.hpp  displacement.hpp  feetConfiguration.hpp  node.hpp  quaternion.hpp  vec2D.hpp  vec2d.hpp  velocityCmd.hpp  world2D.hpp  world3D.hpp
scripts/bash/: cmdVel.sh  cmdVelAll.sh  cmd_vel.sh  cmd_vel_com_propagation.sh
scripts/python/: aliengo_teleop.py  cmdVelPublisher.py  footPrediction.py  footPredictionRelative.py  topicsToCSV.py  topicsToCSV_listener.py  updateClockTime.py  wbcCmdVelPublisher.py
scripts/python/real/: republisher.py  ros_message_republish.py  tf.py  topicsToCSV_real.py  unitree_height_check.py  unitree_raibert_check.py  unitree_topics_republisher.py  unitree_topics_to_csv.py  unitree_topics_to_csv_caches.py  unitree_topics_to_csv_footstep.py  unitree_topics_to_csv_footsteps_from_bag.py  unitree_vel_publisher.py  unitree_vel_publisher_response_evaluation.py  vicon_odometry.py
scripts/python/simulation/: cmdVelPublisher.py  mpcCmdVelPublisher.py  topicsToCSV_sim.py  topicsToCSV_sim_listener.py  wbcCmdVelPublisher.py
src/: aStar.cpp  elevationMapProcessor.cpp  model.cpp  navigation.cpp  planner.cpp
src/search/: AStar.cpp
srv/: FootstepPrediction.srv
(+128 files in other folders)
