<?xml version="1.0"?>
<package format="2">
    <name>aliengo_planner</name>
    <version>0.7.2</version>
    <description>Planning software for aliengo</description>
    <maintainer email="s6iltaou@gmail.com">Ilyass Taouil</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>grid_map_msgs</depend>
</package>
