<?xml version="1.0"?>
<package format="2">
    <name>footstep_planner</name>
    <version>0.7.2</version>
    <description>Quadrupedal Footstep Planner</description>
    <maintainer email="s6iltaou@gmail.com">Ilyass Taouil</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>tf</depend>
    <depend>boost</depend>
    <depend>roscpp</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_core</depend>
    <depend>tf_conversions</depend>
    <depend>message_filters</depend>
    <depend>message_runtime</depend>
    <depend>message_generation</depend>
</package>
